# rust-format-testing

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
data/table_init/: simple.parquet
data/tables/users/_delta_log/: _commit_491e428b-f6fd-451a-9e09-a7566f831dd1.json.tmp
src/: main.rs  parq.rs
